--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,5 @@
 <form action="/checkout" method="post">
   <label for="item">Item: </label>
   <input type="text" name="item" id="item">
+  <input type="submit" value="Submit">
 </form>
